finished the last part

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- header start -->
     <header class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="">
@@ -29,13 +29,13 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">shoes</a>
+                            <a class="nav-link" href="#shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Backpack</a>
+                            <a class="nav-link" href="#backpack">Backpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Subcribe</a>
+                            <a class="nav-link" href="#subcribe">Subcribe</a>
                         </li>
                     </ul>
                 </div>
@@ -137,7 +137,7 @@
             </div>
         </section>
         <!-- Shoes section -->
-        <section class="container my-5">
+        <section class="container my-5" id="shoes">
             <h1>Shoes</h1>
             <div class="row row-cols-1 row-cols-md-3 row-cols-lg-3 g-4">
                 <div class="col">
@@ -188,7 +188,7 @@
             </div>
         </section>
         <!-- bags section  -->
-        <section class="container my-5">
+        <section class="container my-5" id="backpack">
             <h1>Backpack</h1>
             <div class="row row-cols-1 row-cols-md-3 row-cols-lg-3 g-4">
                 <div class="col">
@@ -244,7 +244,7 @@
         </section>
         <!-- Subcribe -->
         <section style="height: 300px;"
-            class="container bg-info d-flex justify-content-center align-items-center rounded-3">
+            class="container bg-info d-flex justify-content-center align-items-center rounded-3" id="subcribe">
             <div>
                 <h1>LET'S STAY IN TOUCH</h1>
                 <p>Get updates on sales, specials and more</p>
